@startuml "Prediction Model"

class Controller {
    -oldMinData: ArrayList<Double>
    -oldMaxData: ArrayList<Double>
    -lrMinData: ArrayList<Double>
    -lrMaxData: ArrayList<Double>
    -prMinData: ArrayList<Double>
    -prMaxData: ArrayList<Double>
    +main(String[] args): void
    -askUser(): void
    -readTemp(): void
    -readData(): void
    -writeToFile(): void
    -minMaxAverage(double[], double[]): void
}

class GenericPredictor {
    #inputData: double[]
    #predictedData: double[]
    #train(): void
    #predict(): double[]
}
class LinearRegression extends GenericPredictor {
    +oldData: ArrayList<double>
    -slope: double
    -intercept: double
    #train(): void 
    #predict(): double[]
}

class PolynomialRegression extends GenericPredictor {
    +oldData: ArrayList<double>
    -coefficients: double[]
    #train(): void 
    #predict(): double[]
}
class FileManager {
    -fileName: String
    -readTemp(): ArrayList<Double>
    -readData(): ArrayList<Double>
    -writeToFile(ArrayList<Double>): void
}

class AverageCalc  {
    -averageData: ArrayList<Double>
    -movingAvgData: ArrayList<Double>
    +averageOfPrediction(ArrayList<Double>, ArrayList<Double>): ArrayList<Double>
    +calcAverage(double, double): double
    +calcMovingAverage(): ArrayList<Double>
    +averageOfList(ArrayList<Double>): double
}

Controller *-- FileManager
Controller o-- GenericPredictor
Controller *-- AverageCalc
PolynomialRegression *-- AverageCalc
LinearRegression *-- AverageCalc

@enduml